--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Pillow==10.2.0
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 requests==2.31.0
-openai==1.12.0
+openai>=1.30.0
 python-multipart==0.0.9
 anthropic>=0.73.0
 replicate>=1.0.0
